# asteroid-music

./: CMakeLists.txt  README.md  asteroid-music.ca.ts  asteroid-music.de.ts  asteroid-music.desktop  asteroid-music.desktop.template  asteroid-music.el.ts  asteroid-music.es.ts  asteroid-music.fa.ts  asteroid-music.fr.ts  asteroid-music.hu.ts  asteroid-music.in  asteroid-music.it.ts  asteroid-music.kab.ts  asteroid-music.ko.ts  asteroid-music.nl.ts  asteroid-music.pl.ts  asteroid-music.pro  asteroid-music.pt_BR.ts  asteroid-music.ru.ts  asteroid-music.ta.ts  asteroid-music.tr.ts  asteroid-music.uk.ts  asteroid-music.zh_Hans.ts  main.cpp  main.qml
i18n/: asteroid-music.ain.ts  asteroid-music.ar.ts  asteroid-music.ast.ts  asteroid-music.az.ts  asteroid-music.be.ts  asteroid-music.bqi.ts  asteroid-music.ca.ts  asteroid-music.cs.ts  asteroid-music.da.ts  asteroid-music.de.ts  asteroid-music.de_DE.ts  asteroid-music.desktop.h  asteroid-music.el.ts  asteroid-music.en_GB.ts  asteroid-music.eo.ts  asteroid-music.es.ts  asteroid-music.es_AR.ts  asteroid-music.fa.ts  asteroid-music.fi.ts  asteroid-music.fr.ts  asteroid-music.gl.ts  asteroid-music.he.ts  asteroid-music.hi.ts  asteroid-music.hr.ts  asteroid-music.hu.ts  asteroid-music.ia.ts  asteroid-music.id.ts  asteroid-music.isv.ts  asteroid-music.it.ts  asteroid-music.ja.ts  asteroid-music.ka.ts  asteroid-music.kab.ts  asteroid-music.ko.ts  asteroid-music.lb.ts  asteroid-music.lt.ts  asteroid-music.mr.ts  asteroid-music.ms.ts  asteroid-music.nb.ts  asteroid-music.nb_NO.ts  asteroid-music.nl.ts  (+21 more)
src/: CMakeLists.txt  main.qml
